--- a/Site/index.html
+++ b/Site/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Hello Coursera</title>
 </head>
 <body>
-<h1>Welcome world</h1>
+<h1>Hello Coursera! I's a great course!</h1>
 </body>
 </html>
